2010-07-31  Teika kazura <teika@lavabit.com>
	* KEYBINDINGS
	* lisp/sawfish/wm.jl
	* lisp/sawfish/wm/ext/edge-flip.jl
	* lisp/sawfish/wm/ext/match-window.jl
	* man/faq.texi
	* man/news.texi
	* man/sawfish.texi
	* man/user-doc.texi
	* src/frames.c
	* src/keys.c
	* src/sawfish.h
	* src/sawfish_subrs.h: Doc
	Polished news.
	Corrected edge-flip docs.
	Supplemented lacking description of subrs: (un)grab-keymap,
	x-raise-window, x-lower-window, and frame-state-mutex.
	In sawfish.texi, all "#!optional" are put into @t{..}.
	Comments.

2010-07-30  Christopher Bratusek <zanghar@freenet.de>
	* src/main.c: add --5-buttons to sawfish --help

2010-07-24  Christopher Bratusek <zanghar@freenet.de>
	* debian/source/format: set 3.0 (native) source format

	* man/news.texi
	* configure.in: bump version to 1.7.0

2010-07-20  Christopher Bratusek <zanghar@freenet.de>
	* config.h.in: updated

	* configure.in: bump minimum librep to 0.90.7

	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/kde.jl
	* themes/Elberg-tabbed/INSTALL
	* themes/get-S-tabbed/INSTALL
	* screenshotter/prep_config.sh
	* README.IMPORTANT
	* OPTIONS: syntax-update for librep 0.90.7

	* man/news.texi: updated

2010-07-03  Teika kazura <teika@lavabit.com>
	* configure.in
	* man/news.texi
	* man/sawfish.1
	* src/events.c
	* src/keys.c
	* src/keys.h: Keyboard layout switching support.
	In 5-button mode, event's state is masked to drop the key group, and
	lower 13 = 8 + 5 bits are taken. (8 for modifiers, 5 for buttons.)
	This fixes the bug that keyboard layout switching messed bindings.
	5-button is now a command line option, not any more the build-time option.

	* lisp/sawfish/wm/server.jl
	* man/news.texi
	* src/server.c: Errors of asynchronous connection are printed
	to Sawfish's output.

	* man/news.texi
	* src/client.c: Polished news. A comment in source.

2010-06-22  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: add a separator to the start of the root menu