@@ -164,10 +164,12 @@ Scroll is done whose steps are `scroll-viewport-steps'."
     ;; Reset all workspaces to viewport 0,0.  This is so that on
     ;; restart (or if another wm takes over) windows aren't in strange
     ;; places.
-    (mapc (lambda (ws-data)
-            (select-workspace (car ws-data))
-            (set-screen-viewport 0 0))
-          workspace-viewport-data))
+    (if workspace-viewport-data
+        (mapc (lambda (ws-data)
+                (select-workspace (car ws-data))
+                (set-screen-viewport 0 0))
+              workspace-viewport-data)
+      (set-screen-viewport 0 0)))
 
   (add-hook 'before-exit-hook viewport-before-exiting t)
 
