@@ -1,3 +1,6 @@
+2010-08-13  Jeremy Hankins <nowan@nowan.org>
+	* lisp/sawfish/wm/viewport.jl: Fixed viewport init bug.
+
 2010-07-31  Teika kazura <teika@lavabit.com>
 	* KEYBINDINGS
 	* lisp/sawfish/wm.jl
